Bug 392441 - internal error with QOverload <>::of
Summary: internal error with QOverload <>::of
Status: RESOLVED FIXED
Alias: None
Product: clazy
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-28 08:59 UTC by Richard
Modified: 2018-03-28 21:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Richard 2018-03-28 08:59:40 UTC
clazy issues an error when used with QOverload template, which is needed for C++11 only code.
It works with the qOverload template function (see bug374951), but this requires C++14.

Example Code: 
connect(m_combo, QOverload<const QString &>::of(&QComboBox::currentIndexChanged), this, &MyObj::mySlot);

Error:
 [-Wclazy-connect-non-signal]: internal error: couldn't find method from pmf connect
Comment 1 Sergio Martins 2018-03-28 21:15:32 UTC
Git commit a7d808a87d4f120505edffab47ae9128154f3beb by Sergio Martins.
Committed on 28/03/2018 at 21:13.
Pushed by smartins into branch 'master'.

connect-non-signal: Make it know about QOverload

M  +5    -1    src/QtUtils.cpp
M  +7    -1    tests/connect-non-signal/main.cpp

https://commits.kde.org/clazy/a7d808a87d4f120505edffab47ae9128154f3beb