connect-non-signal: Make it know about QOverload

BUG: 392441